ExprEnchantLevel, ExprTypeOf, InventoryType & related + item nbt syntax change